--- a/Posts/styles.css
+++ b/Posts/styles.css
@@ -1,5 +1,6 @@
 html,body{margin:0;padding:0}
 body{font: 76% arial,sans-serif;text-align:left}
+body { background-image: url("x3.jpeg"); }
 p{margin:0 10px 10px}
 a{padding:5px; text-decoration:none; color:#000000;}
 div#header{background-color:#F3F2ED;}
