--- a/Posts/styles.css
+++ b/Posts/styles.css
@@ -11,7 +11,7 @@ div#navigation{background:#F6F0E0;}
 div#navigation ul{margin:15px 0; padding:0; list-style-type:none;}
 div#navigation li{margin-bottom:5px;}
 div#extra{background:#CCC8B3;}
-div#footer{background:#BFBD93;opacity: 0.7;}
+div#footer{background:#6f6f6f;opacity: 0.7;}
 div#footer p{margin:0;padding:5px 10px}
 div#container{width:700px;margin:0 auto}
 div#wrapper{float:left;width:100%}
