--- a/Posts/styles.css
+++ b/Posts/styles.css
@@ -2,8 +2,16 @@ html,body{margin:0;padding:0}
 body{font: 100% arial,sans-serif;text-align:left}
 body { background-image: url("x3.jpeg"); }
 p{margin:0 10px 10px}
-a:hover { color:#FFA500;}
-a:active { color:#FF8C00; }
+a:link {
+  color:#FFA500;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color:#FF8C00;
+  background-color: transparent;
+  text-decoration: underline;
+}
 a{padding:5px; text-decoration:none; color:#FF8C00;}
 div#header{background-color:#F3F2ED; opacity: 0.7;}
 div#header h1{height:40px;line-height:40px;margin:3;padding-left:9px; opacity: 0.8;}
